Fix spotlight images on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3133,8 +3133,13 @@
 		@media screen and (max-width: 736px) {
 
 			.spotlights > section > .image {
-				height: 50vh;
-				min-height: 15em;
+				min-height: 0;
+				min-width: 0;
+				height: 0;
+				width: 70%;
+				padding-top: 70%;
+				margin-left: auto;
+				margin-right: auto;
 			}
 
 			.spotlights > section > .content {
@@ -3225,12 +3230,14 @@
 		background-size: cover;
 	}
 
+
+		/*Fixes background on mobile to stay fixed*/
 		.bg {
-			position: absolute;
+			position: fixed;
 			top: 0;
 			left: 0;
-			width: 100%;
-			height: 100%;
+			width: 100vw;
+			height: 100vh;
 			background-color: #212931;
 			background-image: linear-gradient(to top, rgba(19, 21, 25, 0.3), rgba(19, 21, 25, 0.3)), url("images/intro.jpg");
 			/*background-image: -moz-linear-gradient(top, rgba(0,0,0,0.2), rgba(0,0,0,0.2)), url("images/intro.jpg");
@@ -3243,12 +3250,6 @@
 			background-attachment: scroll, scroll, scroll;
 			z-index: -1;
 		}
-
-			.bg {
-				position: fixed;
-				width: 100vw;
-				height: 100vh;
-			}
 
 		.wrapper > .inner {
 			padding: 5em 5em 3em 5em ;
